--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".ui.view.detail.DetailActivity"></activity>
+
+		<meta-data
+			android:name="preloaded_fonts"
+			android:resource="@array/preloaded_fonts" />
 	</application>
 
 </manifest>
