--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,19 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>-->
 		</activity>
-		<activity android:name=".ui.view.login.LoginActivity" />
-		<activity android:name=".ui.view.selection.SelectionActivity" >
+		<activity android:name=".ui.view.login.LoginActivity" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+		</activity>
+		<activity android:name=".ui.view.selection.SelectionActivity" >
+			<!--<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>-->
 		</activity>
 		<activity android:name=".ui.view.detail.DetailActivity"></activity>
 
