--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,19 +23,21 @@ android {
 
 dependencies {
 
-
     final DAGGER_VERSION = "2.17"
     final FRESCO_VERSION = "1.9.0"
-    final MOSHI_VERSION= "1.6.0"
-    final RETROFIT_VERSION ="2.4.0"
+    final MOSHI_VERSION = "1.6.0"
+    final RETROFIT_VERSION = "2.4.0"
     final PAPER_PARCEL = "2.0.6"
+    final ROOM_VERSION = "1.1.1"
+    final SUPPORT_LIB = "28.0.0-rc02"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:28.0.0-rc02"
+    implementation "com.android.support:appcompat-v7:$SUPPORT_LIB"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation "com.android.support:appcompat-v7:$SUPPORT_LIB"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
+    implementation "com.android.support:recyclerview-v7:$SUPPORT_LIB"
+    implementation "com.android.support:design:$SUPPORT_LIB"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -74,4 +76,7 @@ dependencies {
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 
+    implementation "android.arch.persistence.room:runtime:$ROOM_VERSION"
+    kapt "android.arch.persistence.room:compiler:$ROOM_VERSION"
+    implementation "android.arch.persistence.room:rxjava2:$ROOM_VERSION"
 }
