--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$ROOM_VERSION"
 
     implementation "com.jakewharton.rxbinding2:rxbinding:$RXBINDINGS_VERSION"
+
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
 }
