--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,35 +5,29 @@
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 	<application
+		android:name=".App"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:name=".App"
 		android:theme="@style/AppTheme">
 		<activity android:name=".ui.view.splash.SplashActivity">
-			<!--<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>-->
-		</activity>
-		<activity android:name=".ui.view.login.LoginActivity" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ui.view.selection.SelectionActivity" >
-			<!--<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>-->
-		</activity>
-		<activity android:name=".ui.view.detail.DetailActivity"></activity>
+		<activity
+			android:name=".ui.view.login.LoginActivity"
+			android:screenOrientation="portrait"></activity>
+		<activity
+			android:name=".ui.view.selection.SelectionActivity"
+			android:screenOrientation="portrait"></activity>
+		<activity
+			android:name=".ui.view.detail.DetailActivity"
+			android:screenOrientation="portrait"></activity>
 
 		<meta-data
 			android:name="preloaded_fonts"
