--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
     }
 }
 
+
 dependencies {
 
     final DAGGER_VERSION = "2.17"
@@ -31,6 +32,8 @@ dependencies {
     final ROOM_VERSION = "1.1.1"
     final SUPPORT_LIB = "28.0.0-rc02"
     final RXBINDINGS_VERSION = '2.1.1'
+    final MOCKITO_VERSION = "2.22.0"
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$SUPPORT_LIB"
@@ -41,20 +44,17 @@ dependencies {
     implementation "com.android.support:design:$SUPPORT_LIB"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
+    testImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
+    //testImplementation 'de.jodamob.kotlin:kotlin-runner-junit4:0.3.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-
-    //need dagger as the auto generated code is still going to be in java
-    /*implementation "com.google.dagger:dagger:$DAGGER_VERSION"
-    compileOnly 'javax.annotation:jsr250-api:1.0'
-    kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
-    kapt "com.google.dagger:dagger-android-processor:$DAGGER_VERSION"
-    implementation "com.google.dagger:dagger-android:$DAGGER_VERSION"*/
-
 
     compileOnly 'javax.annotation:jsr250-api:1.0'
     kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
