--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 
@@ -46,8 +50,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
-    testImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
-    //testImplementation 'de.jodamob.kotlin:kotlin-runner-junit4:0.3.1'
+    //testImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
