--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
-    //testImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
+    testImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
@@ -91,4 +94,5 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:1.1.1"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
+    androidTestImplementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 }
