--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,3 +95,7 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
     androidTestImplementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 }
+
+androidExtensions {
+    experimental = true
+}
